src/main/deployment/kubernetes/network-policy-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: quarkus-network-policy
spec:
  podSelector:
    matchLabels:
      app: quarkus-app
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - port: 8080
          protocol: TCP
      from:
        - namespaceSelector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - ingress-nginx
  egress:
    - ports:
        - port: 5432
          protocol: TCP
        - port: 6379
          protocol: TCP
      to:
        - podSelector:
            matchLabels:
              app: postgres
        - podSelector:
            matchLabels:
              app: redis
